# COVIDCW

./: .gitignore  create_db.py  database.db  main.py  notebook.ipynb  pyproject.toml  readme.md  relations.vuerd.json  requirements.txt  restrictions_weekly.csv
coursework1/data_exploration/: main.py  utils.py
coursework1/data_exploration/prepared_data/: data.txt  num_days_closed.csv  timeline_data.csv
coursework1/database_creation/: create_db.py  frames.py  relations.vuerd.json
coursework2/: covid_copy.db  design.py  queries.txt  sql_queries.py  testing.py
data_creation/: relations.vuerd.json
data_exploration/: main.py  utils.py
data_exploration/prepared_data/: data.txt  restriction_data
data_exploration/prepared_data/figs/: num_days_closed.json  timeline_data.csv  timeline_events.csv
database_creation/: covid.db  create_db.py  frames.py  inserting.py  relations.vuerd.json
