[project]
name = "COVIDCW"
version = "1.0.0"
description = "COMP0035 Coursework: Data exploration, preparation, and database creation using SQLite"
readme = "README.md"
keywords = ["data-science", "sqlite", "database", "data-exploration"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.6"

[tool.pylint.'MESSAGES CONTROL']
disable=[
  'no-name-in-module'
]