[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "comp0035-14Covid-1"
version = "2024.1"
description = "COMP0035 Coursework using DATASET NAME"  # Replace DATASET NAME with the name of your dataset
readme = "README.md"
keywords = ["data-science", "sqlite", "database", "data-exploration"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.6"

[tool.pylint.'MESSAGES CONTROL']
disable=[
  'no-name-in-module'
]
# Added 14/10/24
[tool.setuptools.packages.find]
include = ["coursework1", "coursework2"]